[tool.poetry]
name = "hbussd"
version = "0.1.0"
description = "HBUS Services Daemon"
authors = ["Bruno <brunosmmm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
twisted = "^22.2.0"
txJSON-RPC = "^0.5"
pyserial = "^3.5"
bottle = "^0.12.19"
bitstring = "^3.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
